// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HidePrint component renders correctly 1`] = `
<div>
  <div
    class="HidePrint-root-1"
  >
    Lorem Ipsum
  </div>
</div>
`;

exports[`HidePrint component renders with custom className 1`] = `
<div>
  <div
    class="test HidePrint-root-3"
  >
    Lorem Ipsum
  </div>
</div>
`;

exports[`HidePrint component renders with custom component 1`] = `
<div>
  <span
    class="HidePrint-root-2"
  >
    Lorem Ipsum
  </span>
</div>
`;
